force-app/main/default/objects/Contact/fields/AutoNumber__c.field-meta.xml
<CustomField>
    <fullName>AutoNumber__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Auto Number</label>
    <type>AutoNumber</type>
</CustomField>