force-app/main/default/objects/Contact/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visakhapatnam</fullName>
            </value>
            <value>
                <fullName>Vijayawada</fullName>
            </value>
            <value>
                <fullName>Guntur</fullName>
            </value>
            <value>
                <fullName>Nellore</fullName>
            </value>
            <value>
                <fullName>Kurnool</fullName>
            </value>
            <value>
                <fullName>Rajahmundry (Rajamahendravaram)</fullName>
            </value>
            <value>
                <fullName>Tirupati</fullName>
            </value>
            <value>
                <fullName>Kakinada</fullName>
            </value>
            <value>
                <fullName>Kadapa</fullName>
            </value>
            <value>
                <fullName>Anantapur</fullName>
            </value>
            <value>
                <fullName>Vizianagaram</fullName>
            </value>
            <value>
                <fullName>Eluru</fullName>
            </value>
            <value>
                <fullName>Ongole</fullName>
            </value>
            <value>
                <fullName>Nandyal</fullName>
            </value>
            <value>
                <fullName>Machilipatnam</fullName>
            </value>
            <value>
                <fullName>Adoni</fullName>
            </value>
            <value>
                <fullName>Tenali</fullName>
            </value>
            <value>
                <fullName>Proddatur</fullName>
            </value>
            <value>
                <fullName>Chittoor</fullName>
            </value>
            <value>
                <fullName>Hindupur</fullName>
            </value>
            <value>
                <fullName>Itanagar</fullName>
            </value>
            <value>
                <fullName>Naharlagun</fullName>
            </value>
            <value>
                <fullName>Guwahati</fullName>
            </value>
            <value>
                <fullName>Silchar</fullName>
            </value>
            <value>
                <fullName>Dibrugarh</fullName>
            </value>
            <value>
                <fullName>Jorhat</fullName>
            </value>
            <value>
                <fullName>Nagaon</fullName>
            </value>
            <value>
                <fullName>Tinsukia</fullName>
            </value>
            <value>
                <fullName>Tezpur</fullName>
            </value>
            <value>
                <fullName>Patna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>