force-app/main/default/objects/Contact/fields/Contact_Industry__c.field-meta.xml
<CustomField>
    <fullName>Contact_Industry__c</fullName>
    <label>Contact Industry</label>
    <type>TextArea</type>
</CustomField>