force-app/main/default/objects/Contact/fields/Family_Member__c.field-meta.xml
<CustomField>
    <fullName>Family_Member__c</fullName>
    <label>Family Member</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>