force-app/main/default/objects/Contact/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <formula>FirstName &amp; &quot; &quot;&amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FullName</label>
    <type>Text</type>
</CustomField>