force-app/main/default/objects/Contact/fields/IsMarried__c.field-meta.xml
<CustomField>
    <fullName>IsMarried__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Married</label>
    <type>Checkbox</type>
</CustomField>