force-app/main/default/objects/Contact/fields/IssueStatus__c.field-meta.xml
<CustomField>
    <fullName>IssueStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IssueStatus</label>
    <type>Checkbox</type>
</CustomField>