force-app/main/default/objects/Contact/fields/MemberShipDate__c.field-meta.xml
<CustomField>
    <fullName>MemberShipDate__c</fullName>
    <label>MemberShipDate</label>
    <type>Date</type>
</CustomField>