force-app/main/default/objects/Contact/fields/Previous_Email__c.field-meta.xml
<CustomField>
    <fullName>Previous_Email__c</fullName>
    <label>Previous_Email</label>
    <type>Email</type>
</CustomField>