force-app/main/default/objects/Contact/fields/ReNewMembershipDate__c.field-meta.xml
<CustomField>
    <fullName>ReNewMembershipDate__c</fullName>
    <formula>MemberShipDate__c + 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReNewMembershipDate</label>
    <type>Date</type>
</CustomField>