force-app/main/default/objects/Contact/fields/Score1__c.field-meta.xml
<CustomField>
    <fullName>Score1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Score1</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>