force-app/main/default/objects/Contact/fields/Score2__c.field-meta.xml
<CustomField>
    <fullName>Score2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Score2</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>