force-app/main/default/objects/Contact/fields/SR_Number__c.field-meta.xml
<CustomField>
    <fullName>SR_Number__c</fullName>
    <formula>&quot;SR &quot; &amp; IF (
  MONTH (DATEVALUE (CreatedDate)) &lt; 4,
  RIGHT(TEXT(YEAR (DATEVALUE (CreatedDate)) - 1), 2) &amp; &quot;/&quot; &amp; RIGHT(TEXT(YEAR (DATEVALUE (CreatedDate))), 2),
  RIGHT(TEXT(YEAR (DATEVALUE (CreatedDate))), 2) &amp; &quot;/&quot; &amp; RIGHT(TEXT(YEAR (DATEVALUE (CreatedDate)) + 1), 2)
) &amp; &quot; &quot; &amp; AutoNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR_Number</label>
    <type>Text</type>
</CustomField>