force-app/main/default/objects/Contact/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subject</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>