force-app/main/default/objects/Contact/fields/Subjects__c.field-meta.xml
<CustomField>
    <fullName>Subjects__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subject</label>
    <referenceTo>CourseNew__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>