force-app/main/default/objects/Contact/fields/TotalPaidAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalPaidAmount__c</fullName>
    <label>TotalPaidAmount</label>
    <summarizedField>Revenue__c.Amount__c</summarizedField>
    <summaryForeignKey>Revenue__c.RelatedMember__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>