force-app/main/default/objects/Contact/fields/Updated_By_Automation__c.field-meta.xml
<CustomField>
    <fullName>Updated_By_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated By Automation</label>
    <type>Checkbox</type>
</CustomField>