force-app/main/default/objects/Contact/validationRules/Aadhar_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Aadhar_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        RecordType.DeveloperName = &quot;Staff&quot;,
        RecordType.DeveloperName = &quot;Student&quot;
    ),
    OR(
        ISBLANK(Aadhaar__c),
        NOT(REGEX(Aadhaar__c, &quot;^[0-9]{12}$&quot;))
    )
)</errorConditionFormula>
    <errorMessage>Aadhar should contain numbers only and 12 characters long and cannot be empty</errorMessage>
</ValidationRule>