force-app/main/default/objects/Contact/validationRules/BirthDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>BirthDateValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordTypeId ==&quot;Student&quot;,OR(
    Birthdate &gt;  TODAY() ,
      ADDMONTHS( Birthdate ,180) &gt; TODAY()
))</errorConditionFormula>
    <errorMessage>Student should at least of 15 years for admission</errorMessage>
</ValidationRule>