force-app/main/default/objects/Contact/validationRules/Email_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        RecordType.DeveloperName = &quot;Staff&quot;,
        RecordType.DeveloperName = &quot;Student&quot;,
        RecordType.DeveloperName = &quot;Member&quot;

    ),
    OR (ISBLANK (Email), LEN (TRIM(Email)) = 0)
    
)</errorConditionFormula>
    <errorMessage>Email is required.</errorMessage>
</ValidationRule>