force-app/main/default/objects/Contact/validationRules/FirstName_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>FirstName_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        RecordType.DeveloperName = &quot;Staff&quot;,
        RecordType.DeveloperName = &quot;Student&quot;,
        RecordType.DeveloperName = &quot;Member&quot;

    ),
   ISBLANK(FirstName)   
)</errorConditionFormula>
    <errorMessage>First Name is required</errorMessage>
</ValidationRule>