force-app/main/default/objects/Contact/validationRules/Gender_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Gender_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        RecordType.DeveloperName = &quot;Staff&quot;,
        RecordType.DeveloperName = &quot;Student&quot;,
        RecordType.DeveloperName = &quot;Member&quot;

    ),
    ISPICKVAL (Gender__c, &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Gender is required</errorMessage>
</ValidationRule>