force-app/main/default/objects/Contact/validationRules/IssueStatusCheckValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>IssueStatusCheckValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  IssueStatus__c = TRUE,
  NOT(Updated_By_Automation__c)
)</errorConditionFormula>
    <errorMessage>IssueStatus Cannot Be Checked Manually</errorMessage>
</ValidationRule>