force-app/main/default/objects/Contact/validationRules/MembershipDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>MembershipDateValidation</fullName>
    <active>true</active>
    <errorConditionFormula>MemberShipDate__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Membership Date Cannot Be Future</errorMessage>
</ValidationRule>