force-app/main/default/objects/Contact/validationRules/Mobile_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    OR(
        RecordType.DeveloperName = &quot;Staff&quot;,
        RecordType.DeveloperName = &quot;Student&quot;,
        RecordType.DeveloperName = &quot;Member&quot;
    ),
    OR(
        ISBLANK(Phone),
        NOT(REGEX(Phone, &quot;^[0-9]{10}$&quot;))
    )
)</errorConditionFormula>
    <errorMessage>Mobile Phone is required</errorMessage>
</ValidationRule>